--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ bytes = "1.10.0"
 futures-util = "0.3.31"
 http-body-util = "0.1.2"
 rand = "0.8.5"
+libsqlite3-sys = "0.30.1"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["async_tokio"] }
