ci: tag latest version only for calver release
latest should point at CalVer release, and nightly should point at master/main branch. We're cleaning things up for self-hosted users.

--- a/.github/workflows/release-ghcr-version-tag.yml
+++ b/.github/workflows/release-ghcr-version-tag.yml
@@ -20,3 +20,9 @@ jobs:
           docker buildx imagetools create --tag \
            ghcr.io/getsentry/taskbroker:${{ github.ref_name }} \
            ghcr.io/getsentry/taskbroker:${{ github.sha }}
+
+      - name: Tag latest version
+        run: |
+          docker buildx imagetools create --tag \
+           ghcr.io/getsentry/taskbroker:latest \
+           ghcr.io/getsentry/taskbroker:${{ github.sha }}
