--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -28,12 +28,26 @@ jobs:
           platforms: linux/${{ matrix.platform }}
           dockerfile_path: './Dockerfile'
           build_args: TASKBROKER_GIT_REVISION=${{ github.sha }}
-          ghcr: true
+          ghcr: ${{ (github.event_name == 'pull_request') && false || true }}
           tag_suffix: -${{ matrix.platform }}
           publish_on_pr: true
           google_ar: false
           tag_nightly: false
           tag_latest: false
+
+      - name: Save Docker image to tar file
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          docker image save --output /tmp/taskbroker-${{ matrix.platform }}.tar ghcr.io/getsentry/taskbroker:${{ github.sha }}-${{ matrix.platform }}
+
+      - name: Upload artifact for self-hosted e2e
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2 
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          name: taskbroker-${{ matrix.platform }}
+          path: /tmp/taskbroker-${{ matrix.platform }}.tar
+          if-no-files-found: error
+          retention-days: 1
 
   assemble-taskbroker-image:
     runs-on: ubuntu-latest
@@ -91,6 +105,19 @@ jobs:
     timeout-minutes: 30
 
     steps:
+      - name: Download artifact for pull request
+        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          name: taskbroker-amd64
+          path: /tmp/taskbroker-amd64.tar
+      
+      - name: Load Docker image from tar file
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          docker image load --input /tmp/taskbroker-amd64.tar
+          docker image tag ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 ghcr.io/getsentry/taskbroker:${{ github.sha }}
+
       - name: Run Sentry self-hosted e2e CI
         uses: getsentry/self-hosted@master
         with:
