--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -67,6 +67,7 @@ jobs:
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
 
       - name: Create multiplatform manifests
+        if: ${{ github.event_name != 'pull_request' }}
         run: |
           docker buildx imagetools create \
             --tag ghcr.io/getsentry/taskbroker:${{ github.event.pull_request.head.sha || github.sha }} \
