--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -34,14 +34,14 @@ jobs:
           google_ar: false
           tag_nightly: false
           tag_latest: false
-          outputs: ${{ github.event_name == 'pull_request' && 'type=docker,dest=/tmp/taskbroker-${{ matrix.platform }}.tar' || '' }}
+          outputs: ${{ github.event_name == 'pull_request' && 'type=docker,dest=/tmp/taskbroker.tar' || '' }}
 
       - name: Upload artifact for self-hosted e2e
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         if: ${{ github.event_name == 'pull_request' }}
         with:
           name: taskbroker-${{ matrix.platform }}
-          path: /tmp/taskbroker-${{ matrix.platform }}.tar
+          path: /tmp/taskbroker.tar
           if-no-files-found: error
           retention-days: 1
 
@@ -107,12 +107,12 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
         with:
           name: taskbroker-amd64
-          path: /tmp/taskbroker-amd64.tar
+          path: /tmp/taskbroker.tar
 
       - name: Load Docker image from tar file
         if: ${{ github.event_name == 'pull_request' }}
         run: |
-          docker image load --input /tmp/taskbroker-amd64.tar
+          docker image load --input /tmp/taskbroker.tar
           docker image tag ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 ghcr.io/getsentry/taskbroker:${{ github.sha }}
 
       - name: Run Sentry self-hosted e2e CI
