--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -34,7 +34,13 @@ jobs:
           google_ar: false
           tag_nightly: false
           tag_latest: false
-          outputs: ${{ github.event_name == 'pull_request' && 'type=docker,dest=/tmp/taskbroker.tar' || '' }}
+          tags: ${{ github.event_name == 'pull_request' && 'ghcr.io/getsentry/taskbroker:nightly' || ''}}
+
+      - name: Save Docker image to artifact
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          docker image ls --all
+          docker save -o /tmp/taskbroker.tar ghcr.io/getsentry/taskbroker:nightly
 
       - name: Upload artifact for self-hosted e2e
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
@@ -113,7 +119,7 @@ jobs:
         run: |
           docker image load --input /tmp/taskbroker.tar
           docker image ls --all --no-trunc
-          docker image tag ghcr.io/getsentry/taskbroker:${{ github.sha }}-amd64 ghcr.io/getsentry/taskbroker:${{ github.sha }}
+          docker image tag ghcr.io/getsentry/taskbroker:nightly ghcr.io/getsentry/taskbroker:${{ github.sha }}
 
       - name: Run Sentry self-hosted e2e CI
         uses: getsentry/self-hosted@master
