--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -63,7 +63,14 @@ jobs:
   build-production:
     runs-on: ubuntu-24.04
     if: github.ref_name == github.event.repository.default_branch
-    name: Build and push production images
+    name: Build and push production images to ${{ matrix.registry }} registry
+    strategy:
+      matrix:
+        include:
+          - registry: single-region
+            image: us-central1-docker.pkg.dev/sentryio/taskbroker/image
+          - registry: multi-region
+            image: us-docker.pkg.dev/sentryio/taskbroker-mr/image
     permissions:
       contents: read
       id-token: write
@@ -81,7 +88,7 @@ jobs:
           google_ar: true
           tag_nightly: false
           tag_latest: true
-          google_ar_image_name: us-central1-docker.pkg.dev/sentryio/taskbroker/image
+          google_ar_image_name: ${{ matrix.image }}
           google_workload_identity_provider: projects/868781662168/locations/global/workloadIdentityPools/prod-github/providers/github-oidc-pool
           google_service_account: gha-gcr-push@sac-prod-sa.iam.gserviceaccount.com
 
