--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -5,12 +5,15 @@ description = "Taskbroker python client and worker runtime"
 readme = "README.md"
 requires-python = ">=3.12.11"
 dependencies = [
+    "sentry-arroyo>=2.33.1",
+    "sentry-sdk[http2]>=2.43.0",
     "sentry-protos>=0.2.0",
     "confluent_kafka>=2.3.0",
     "grpcio==1.66.1",
     "orjson>=3.10.10",
     "protobuf>=5.28.3",
     "types-protobuf>=6.30.2.20250703",
+    "zstandard>=0.18.0",
 ]
 
 [dependency-groups]
@@ -38,7 +41,7 @@ default = true
 
 [tool.pytest.ini_options]
 pythonpath = ["python"]
-testpaths = ["test"]
+testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
 
