Get schedules tests passing
Replace django's timezone.now() with datetime.now(tz=UTC)

--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -9,10 +9,13 @@ dependencies = [
     "sentry-sdk[http2]>=2.43.0",
     "sentry-protos>=0.2.0",
     "confluent_kafka>=2.3.0",
+    "cronsim>=2.6",
     "grpcio==1.66.1",
     "orjson>=3.10.10",
     "protobuf>=5.28.3",
     "types-protobuf>=6.30.2.20250703",
+    "redis>=3.4.1",
+    "redis-py-cluster>=2.1.0",
     "zstandard>=0.18.0",
 ]
 
@@ -26,6 +29,7 @@ dev = [
     "flake8>=7.3.0",
     "isort>=5.13.2",
     "mypy>=1.17.1",
+    "time-machine>=2.16.0",
 ]
 
 [build-system]
