--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -49,7 +49,8 @@ python_files = ["test_*.py"]
 python_functions = ["test_*"]
 
 [tool.mypy]
-mypy_path = "python"
+files = ["."]
+mypy_path = ["src"]
 explicit_package_bases = true
 # minimal strictness settings
 check_untyped_defs = true
@@ -66,6 +67,9 @@ disallow_untyped_defs = true
 # begin: missing 3rd party stubs
 [[tool.mypy.overrides]]
 module = [
+    ".conftest",
+    "redis",
+    "rediscluster.*",
     "confluent_kafka.*",
 ]
 ignore_missing_imports = true
