--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -30,6 +30,10 @@ dev = [
     "mypy>=1.17.1",
     "time-machine>=2.16.0",
 ]
+[project.optional-dependencies]
+examples = [
+    "click>=8.3"
+]
 
 [build-system]
 requires = ["uv_build>=0.8.2,<0.9.0"]
