--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ default = true
 members = ["integration_tests", "clients/python"]
 
 [tool.mypy]
-mypy_path = "python"
+mypy_path = "integration_tests,clients/python"
 explicit_package_bases = true
 # minimal strictness settings
 check_untyped_defs = true
@@ -53,6 +53,8 @@ disallow_untyped_defs = true
 # begin: missing 3rd party stubs
 [[tool.mypy.overrides]]
 module = [
+    "redis.*",
+    "rediscluster.*",
     "confluent_kafka.*",
 ]
 ignore_missing_imports = true
