Get precommit working

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,14 +53,16 @@ repos:
 
     - id: mypy
       name: mypy-tests
-      entry: mypy -p integration_testsg
+      entry: "mypy"
+      exclude: "clients/"
       language: system
       types: [python]
       require_serial: true
 
     - id: mypy
       name: mypy-client
-      entry: mypy -p taskbroker_client
+      entry: "mypy"
+      exclude: "integration_tests/"
       language: system
       types: [python]
       require_serial: true
