--- a/.craft.yml
+++ b/.craft.yml
@@ -1,5 +1,6 @@
-minVersion: "0.27.2"
-changelogPolicy: auto
+minVersion: "2.15.0"
+changelog:
+  policy: auto
 artifactProvider:
   name: none
 statusProvider:
@@ -14,10 +15,10 @@ targets:
   - id: release
     name: docker
     source: ghcr.io/getsentry/taskbroker
-    target: getsentry/taskbroker
+    target: ghcr.io/getsentry/taskbroker
   - id: latest
     name: docker
     source: ghcr.io/getsentry/taskbroker
-    target: getsentry/taskbroker
+    target: ghcr.io/getsentry/taskbroker
     targetFormat: '{{{target}}}:latest'
   - name: github
