--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ sentry = { version = "0.41.0", default-features = false, features = [
     "tracing",
     "logs"
 ] }
-sentry_protos = "0.2.0"
+sentry_protos = { path = "/Users/georgeberdovskiy/Desktop/Repositories/sentry-protos/rust/" }
 serde = "1.0.214"
 serde_yaml = "0.9.34"
 sha2 = "0.10.8"
