--- a/.craft.yml
+++ b/.craft.yml
@@ -6,18 +6,20 @@ statusProvider:
   name: github
   config:
     contexts:
-      - 'build-arm64'
-      - 'build-amd64'
-      - 'assemble-taskbroker-image'
+    - 'build-arm64'
+    - 'build-amd64'
+    - 'assemble-taskbroker-image'
 preReleaseCommand: ""
 targets:
-  - id: release
-    name: docker
-    source: ghcr.io/getsentry/taskbroker
-    target: getsentry/taskbroker
-  - id: latest
-    name: docker
-    source: ghcr.io/getsentry/taskbroker
-    target: getsentry/taskbroker
-    targetFormat: '{{{target}}}:latest'
-  - name: github
+- id: release
+  name: docker
+  source: ghcr.io/getsentry/taskbroker
+  target: getsentry/taskbroker
+- id: latest
+  name: docker
+  source: ghcr.io/getsentry/taskbroker
+  target: getsentry/taskbroker
+  targetFormat: '{{{target}}}:latest'
+- name: github
+versioning:
+  policy: calver
