--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,8 @@
 kafka_topic: "test-topic"
 push: true
+default_metrics_tags:
+  host: "127.0.0.1"
+log_filter: "debug,sqlx=debug,librdkafka=warn,h2=off"
 # workers:
 #   - "http://127.0.0.1:50052"
 #   - "http://127.0.0.1:50053"
