Implement Sync Pushing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,8 @@ sentry = { version = "0.41.0", default-features = false, features = [
     "tracing",
     "logs"
 ] }
-sentry_protos = { git = "https://github.com/getsentry/sentry-protos", branch = "george/push-broker-worker" }
+sentry_protos = { git = "https://github.com/getsentry/sentry-protos", branch = "george/push-broker-with-load-balancing" }
+# sentry_protos = { path = "/Users/georgeberdovskiy/code/sentry-protos/rust" }
 itertools = "0.14.0"
 serde = "1.0.214"
 serde_yaml = "0.9.34"
