--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 kafka_topic: "test-topic"
-push: true
+push_mode: true
+push_threads: 8
 default_metrics_tags:
   host: "127.0.0.1"
 log_filter: "debug,sqlx=debug,librdkafka=warn,h2=off"
