--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,7 +54,7 @@ repos:
     - id: mypy
       name: mypy-tests
       entry: "mypy"
-      exclude: "clients/"
+      files: "^integration_tests/.*"
       language: system
       types: [python]
       require_serial: true
@@ -62,7 +62,7 @@ repos:
     - id: mypy
       name: mypy-client
       entry: "mypy"
-      exclude: "integration_tests/"
+      files: "^clients/python/.*"
       language: system
       types: [python]
       require_serial: true
