--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
       - release/**
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
