try to get postgres working

--- a/devservices/config.yml
+++ b/devservices/config.yml
@@ -20,8 +20,8 @@ x-sentry-service-config:
     taskbroker:
       description: Taskbroker service
   modes:
-    default: [kafka]
-    client: [kafka, redis]
+    default: [kafka, postgres]
+    client: [kafka, redis, postgres]
     containerized: [kafka, redis, postgres, taskbroker]
 
 x-programs:
@@ -42,6 +42,38 @@ services:
       - orchestrator=devservices
     restart: unless-stopped
     platform: linux/amd64
+  services:
+  postgres:
+    image: ghcr.io/getsentry/image-mirror-library-postgres:14-alpine
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRES_DB: sentry
+    command:
+      [
+        postgres,
+        -c,
+        wal_level=logical,
+        -c,
+        max_replication_slots=1,
+        -c,
+        max_wal_senders=1,
+      ]
+    healthcheck:
+      test: pg_isready -U postgres
+      interval: 5s
+      timeout: 5s
+      retries: 3
+    networks:
+      - devservices
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    ports:
+      - 127.0.0.1:5432:5432
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    labels:
+      - orchestrator=devservices
+    restart: unless-stopped
 
 networks:
   devservices:
