--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2024"
 
 [profile.release]
 debug = 1
+split-debuginfo = "off" # Ensures symbols stay in the binary
+force-frame-pointers = true # Requires Rust 1.75+
 
 [dependencies]
 anyhow = "1.0.92"
+axum = "0.8.1"
 bytes = "1.10.0"
 chrono = { version = "0.4.26" }
 clap = { version = "4.5.20", features = ["derive"] }
@@ -25,6 +28,7 @@ http-body-util = "0.1.2"
 libsqlite3-sys = "0.30.1"
 metrics = "0.24.0"
 metrics-exporter-statsd = "0.9.0"
+pprof = { version = "0.14", features = ["flamegraph", "frame-pointer"] }
 prost = "0.13"
 prost-types = "0.13.3"
 rand = "0.9.2"
