--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -33,11 +33,12 @@ dev = [
 ]
 [project.optional-dependencies]
 examples = [
-    "click>=8.3"
+    "click>=8.3",
+    "setuptools>=80.0",
 ]
 
 [build-system]
-requires = ["uv_build>=0.8.2,<0.9.0"]
+requires = ["uv_build>=0.8.2"]
 build-backend = "uv_build"
 
 [tool.uv]
