--- a/.github/workflows/python-example-image.yml
+++ b/.github/workflows/python-example-image.yml
@@ -1,6 +1,3 @@
----
-name: Python Example Docker Image
-
 on:
   pull_request:
     paths:
@@ -13,8 +10,8 @@ on:
 
 jobs:
   build:
+    name: 'Build example app image'
     runs-on: ubuntu-24.04
-    strategy:
     name: build-python-example
     permissions:
       contents: read
