fix(client) Fix mistakes in the client release tools
- Add a name to the workflow.
- Fix changelogPolicy deprecation
- Define NEW_VERSION

Refs STREAM-717

--- a/clients/.craft.yml
+++ b/clients/.craft.yml
@@ -1,5 +1,7 @@
-changelogPolicy: auto
 preReleaseCommand: ../scripts/bump-version-clients.sh
+
+changelog:
+  policy: auto
 
 targets:
   - name: github
