--- a/.github/workflows/release-client.yml
+++ b/.github/workflows/release-client.yml
@@ -32,6 +32,10 @@ jobs:
           token: ${{ steps.token.outputs.token }}
           fetch-depth: 0
 
+      - uses: astral-sh/setup-uv@5a7eac68fb9809dea845d802897dc5c723910fa3 # v7.1.3
+        with:
+          version: '0.8.2'
+
       - name: Prepare release
         uses: getsentry/craft@c6e2f04939b6ee67030588afbb5af76b127d8203 # v2
         env:
