--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ kafka_topic: "taskworker"
 push_mode: true
 push_threads: 8
 default_metrics_tags:
-  host: "127.0.0.1"
+  host: "taskbroker-0"
 log_filter: "debug,sqlx=debug,librdkafka=warn,h2=off"
 # workers:
 #   - "http://127.0.0.1:50052"
