Exclude changelog from end of file fixer
craft modifies this file and it's ending won't always match what
pre-commit wants

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
     - id: check-symlinks
     - id: end-of-file-fixer
       exclude_types: [svg]
+      exclude: "^clients/CHANGELOG.md"
     - id: trailing-whitespace
       exclude_types: [svg]
     - id: check-added-large-files
