fix: Relax grpc constraint
Make this library have an open constraint so that it can be compatible
with more host application requirements.

Refs STREAM-717

--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "sentry-protos>=0.4.11",
     "confluent_kafka>=2.3.0",
     "cronsim>=2.6",
-    "grpcio==1.66.1",
+    "grpcio>=1.67.0",
     "orjson>=3.10.10",
     "protobuf>=5.28.3",
     "types-protobuf>=6.30.2.20250703",
