--- a/.github/workflows/python-example-image.yml
+++ b/.github/workflows/python-example-image.yml
@@ -22,7 +22,7 @@ jobs:
         uses: getsentry/action-build-and-push-images@a53f146fc1ea3cb404f2dcf7378f5b60dd98d3ca
         with:
           image_name: 'taskbroker-python-example'
-          platforms: linux/${{ matrix.platform }}
+          platforms: linux/amd64
           dockerfile_path: './clients/python/Dockerfile.example'
           dockerfile_context: './clients/python'
           ghcr: true
