--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ serde_yaml = "0.9.34"
 sha2 = "0.10.8"
 sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono", "postgres"] }
 tokio = { version = "1.43.1", features = ["full"] }
+tokio-metrics = { version = "0.4", features = ["rt", "metrics-rs-integration"] }
 tokio-stream = { version = "0.1.16", features = ["full"] }
 tokio-util = "0.7.12"
 tonic = "0.14"
