--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -12,7 +12,6 @@ dependencies = [
     "grpcio>=1.67.0",
     "orjson>=3.10.10",
     "protobuf>=5.28.3",
-    "types-protobuf>=6.30.2.20250703",
     "redis>=3.4.1",
     "redis-py-cluster>=2.1.0",
     "zstandard>=0.18.0",
@@ -30,6 +29,7 @@ dev = [
     "isort>=5.13.2",
     "mypy>=1.17.1",
     "time-machine>=2.16.0",
+    "types-protobuf>=5.27.0.20240626,<6.0.0",
 ]
 [project.optional-dependencies]
 examples = [
